# rust-mesh

./: .gitignore  Cargo.toml
src/: assimp_handler.rs  gl_mod.rs  glium.rs  glium_mod.rs  icosphere.rs  main.rs  octahedron.rs  scene_element.rs  triangle_mesh.rs
src/glium_mod/: mod.rs
src/glsl/: wireframe_fragment.glsl  wireframe_geometry.glsl  wireframe_vertex.glsl
