[package]
name = "rust-mesh"
version = "0.1.0"
authors = ["Dan Gopstein <dan@gopstein.com>"]

[dependencies]
#libc   = "*"
#gl     = "*"
#glfw   = "*"
#glium  = "*"
#glutin = "*"

[dependencies.glium]
path = "/Users/dgopstein/glium"

#[dependencies.assimp]
#path = "/Users/dgopstein/assimp_rs"
#version = "0.1.4"
#git = "file:/Users/dgopstein/assimp_rs"
